Finish UI as well as error handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ASAPTestApp</string>
+    <string name="app_name">ASAP Test App</string>
+    <string name="account_balance">Account\'s balance :</string>
 </resources>
