--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">ASAP Test App</string>
     <string name="account_balance">Account\'s balance :</string>
+    <string name="hint_your_account_name">Your account name</string>
+    <string name="hint_receiver_account_name">Receiver account name</string>
+    <string name="transfer_amount">Transfer Amount</string>
+    <string name="label_memo">Memo</string>
+    <string name="private_key">Private key</string>
+    <string name="account_balance_content">Account balance %s</string>
+    <string name="check">CHECK</string>
+    <string name="transfer">TRANSFER</string>
+    <string name="clear">Clear</string>
 </resources>
